divided pages with comments

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Samatar</title>
 </head>
 <body>
+
+    <!-- Home page -->
     <div class="home">
         <div class="nav">
             <a class="h_nav">Home</a>
@@ -26,10 +28,14 @@
         </div>
 
     </div>
+
+    <!-- About page -->
     <div class="about">
         <p>ABOUT</p>
 
     </div>
+
+    <!-- Contact page -->
     <div class="contact">
         <p>CONTACT</p>
         <div class="c_info">
