Made some changes to the footer and contact section using flex box

--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
         <div class="c_info">
             <i class="far fa-envelope fa-2x" style="color:#fff;"></i><small class="email" style="font-size: 24px; margin-left:2em; position: relative; top:-1.2em; color:#fff;">aboud3am81@gmail.com</small>
             <i class="fas fa-phone fa-2x" style="color:#fff;"></i><small class="number" style="font-size: 24px; margin-left:2em; position: relative; top:-1.2em; color:#fff;">+255621485339</small>
+        </div>    
+    </div>
+    
+    <!-- Footer -->
+    <div class="footer">
+        <div class="icons">
+            <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-instagram fa-2x"></i>
+            <i class="fab fa-twitter fa-2x"></i>
         </div>
-        <div class="footer">
-            <div class="icons">
-                <i class="fab fa-github fa-2x"></i>
-                <i class="fab fa-instagram fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-            </div>
-        </div>
-
     </div>
     
 </body>
