fixed the footer and contact section

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
     <!-- Contact page -->
     <div class="contact">
-        <p>CONTACT</p>
+        <p class="c_title">CONTACT</p>
         <div class="c_info">
-            <i class="far fa-envelope fa-2x" style="color:#fff;"></i><small class="email" style="font-size: 24px; margin-left:2em; position: relative; top:-1.2em; color:#fff;">aboud3am81@gmail.com</small>
-            <i class="fas fa-phone fa-2x" style="color:#fff;"></i><small class="number" style="font-size: 24px; margin-left:2em; position: relative; top:-1.2em; color:#fff;">+255621485339</small>
+            <div class="c_p1"><i class="far fa-envelope fa-2x" style="color:#fff;"></i><p class="email">aboud3am81@gmail.com</p></div>
+            <div class="c_p2"><i class="fas fa-phone fa-2x" style="color:#fff;"></i><p class="number">+255621485339</p></div>
         </div>    
     </div>
-    
+
     <!-- Footer -->
     <div class="footer">
         <div class="icons">
