--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/223a2e05b6.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <link href="index.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,11 +15,11 @@
 <body>
 
     <!-- Home page -->
-    <div class="home">
+    <div id="home" class="home">
         <div class="nav">
-            <a class="h_nav">Home</a>
-            <a class="a_nav">About</a>
-            <a class="c_nav">Contact</a>
+            <a class="h_nav"  href="#home">Home</a>
+            <a class="a_nav" href="#about">About</a>
+            <a class="c_nav"  href="#contact">Contact</a>
         </div>
         <div class="logo">
             <small class="small">samatar a<span style="color:#f72585; font-size: 40px;">.</span></small> 
@@ -30,13 +31,13 @@
     </div>
 
     <!-- About page -->
-    <div class="about">
+    <div id="about" class="about">
         <p>ABOUT</p>
 
     </div>
 
     <!-- Contact page -->
-    <div class="contact">
+    <div id="contact" class="contact">
         <p class="c_title">CONTACT</p>
         <div class="c_info">
             <div class="c_p1"><i class="far fa-envelope fa-2x" style="color:#fff;"></i><p class="email">aboud3am81@gmail.com</p></div>
@@ -52,6 +53,6 @@
             <i class="fab fa-twitter fa-2x"></i>
         </div>
     </div>
-    
+    <script src="app.js"></script>
 </body>
 </html>
