added a new div

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <div class="home_info">
             <p>Hi, my name is Samatar <br/>and I create websites</p><div class="dot"></div>
         </div>
+        <div class="rocket">
+
+        </div>
         
     </div>
     
