added a rocket to the home page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="home_info">
             <p>Hi, my name is Samatar <br/>and I create websites</p><div class="dot"></div>
         </div>
-        <div class="rocket">
-
+        <div class="main_img">
+<img src="asset/Saly-43.png" alt="IMAGE" class="rocket">
         </div>
         
     </div>
