changed the background color for the about section to white

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         <div class="logo">
             <small class="small">samatar a<span style="color:#f72585; font-size: 40px;">.</span></small> 
         </div>
-        <div class="home_info">
-            <p>Hi, my name is Samatar <br/>and I create websites</p><div class="dot"></div>
-        </div>
-        <div class="main_img">
-<img src="asset/Saly-43.png" alt="IMAGE" class="rocket">
+        <div class="main">
+            <div class="home_info">
+                <p>Hi, my name is Samatar <br/>and I create websites</p><div class="dot"></div>
+            </div>
+            <div class="main_img">
+                    <img src="asset/Saly-43.png" alt="IMAGE" class="rocket">
+            </div>
         </div>
         
     </div>
