--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     
     <!-- Footer -->
     <div class="footer">
-        <div class="icons">
+        <!-- <div class="icons">
             <i class="fab fa-github fa-2x"></i>
             <i class="fab fa-instagram fa-2x"></i>
             <i class="fab fa-twitter fa-2x"></i>
-        </div>
+        </div> -->
     </div>
     <script src="app.js"></script>
 </body>
